# torchcell

./: .buildinfo  .dendron.ws  .dmypy.json  .dockerignore  .flake8  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  2025-10-22-subgraph-optimization-plan.md  2025-10-28-lazy_hetero_cell_bipartite_dango_gi.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.neo4j-4.4.30-community  Dockerfile.tc-lit  MANIFEST.in  Makefile  README.md  TorchCell.code-workspace  WS15_HANDOFF.md  WS15_PLAN.md  WS15_STATUS.md  datasets.sh  dendron.code-workspace  dendron.yml  dendronrc.yml  docker-compose-chatgse.yml  docker-compose.tc-lit.yml  docker-compose.yml  duplicate_check.json  gene_set_neo4j_troubleshoot_small.json  genindex.html  git-out.txt  impitool.txt  index.html  locus_schema.json  lr_explore.py  m1_create_scerevisiae_kg_small.pstats  (+29 more)
.cache/: cache.json
.claude/: config.json  settings.json  settings.local.json
.claude/agents/: python-note-updater.md
.claude/commands/: GO_DAG_perturbation_visualization_date_filtered_and_unfiltered.md  add_string_11.md  coo_transforms.md  dcell_experiment.md  dcell_experiment_device_issue.md  dcell_experiment_level_refactor.md  hetero_cell_bipartite_dango_gi_refactor.md  icloss_produces_nan_in_pipeline.md  inference_dataset.md  load_dango_pipeline.md  morphology_dataset.md  refactor_dcell_model.md  review_dcell_model.md
.doctrees/: index.doctree
.doctrees/modules/: models.doctree  sequence.doctree
.github/workflows/: docs.yaml  mypy.yaml  publish.yml  pytest.yaml  python-publish.yaml  python_app.yaml  semantic-release.yaml  style.yaml  test.yaml
_modules/: index.html
biocypher-out/20231213223906/: Gene-part000.csv  Schema_info-part000.csv  TranscriptionFactor-part000.csv  TranscriptionalRegulation-header.csv  (+2 more)
conf/: TorchCell.mplstyle  torchcell.mplstyle
config/: biocypher_config.yaml  biocypher_docker_config.yaml  costanzo_biocypher_config.yaml  costanzo_biocypher_docker_config.yaml  costanzo_schema_config.yaml  delta_biocypher_config.yaml  torchcell_schema_config.yaml
database/: Dockerfile.neo4j-4.4.30-community  Dockerfile.tc-neo4j  Dockerfile.tc-neo4j-4.4.30-community  database.env  database.env.template
docs/: Makefile  conf.py  index.rst  introduction.md  my_package.rst  requirements.txt  torchcell.rst
env/: igb_delta_match_req.txt  requirements-tc-graph.txt  requirements.txt  requirements_db-build_pypy3.10.txt  requirements_dependent.txt  requirements_docs.txt  requirements_experiments.txt  requirements_mypy.txt  requirements_style.txt  requirements_test.txt  tc-graph-docker.yaml  tc-graph.yaml
experiments/: dmf_costanzo_deepset.py  dmf_costanzo_projection.py  dmf_fitness.py  dmf_fitness_demo.py  local_alignment.py  s288c_genes_multiple_CDS.py  s288c_stop_start_codons.py
git_hooks/: pre-commit  setup.sh
modules/: models.html  sequence.html
notes/: .Users.michaelvolk.Documents.projects.TorchCell.src.torchcell.datasets.genome.md  .dendron.cache.json  003-fit-int.problem-formulation.md  ChatGSE.smf-costanzo2016-demo.md  access.report.2024.05.15.md  access.report.2024.12.03.md  access.report.2025.10.31.md  biocypher.config.torchcell_schema_config.yaml.md  biocypher.tutorial-queries.md  cli.ncbi.md  computer.delta.rsync.md  conference.simb-2026.abstract.md  containerize.delta.md  containerize.igb.md  cypher-queries.md  cypher-shell.md  data-factory.md  database.apptainer.builds.2024.03.22.md  database.apptainer.md  database.biolink.md  database.chunking.md  database.common-issues.md  database.docker.biochatter.md  database.docker.build.overview.md  database.docker.builds.2024.03.13.md  database.docker.builds.md  database.docker.md  database.gilahyper.build-rsync-delta-instructions.md  database.openstack.chrome-site-insecure-fix.md  database.openstack.md  ddp_file_locking_fix_summary.md  delta.issue.2024.04.24.md  delta.issues.2024.04.16.md  experiments.002-dmi-tmi.md  experiments.002-dmi-tmi.scripts.dataset_composition_palette.md  experiments.002-dmi-tmi.scripts.dataset_sampling_palette.md  experiments.002-dmi-tmi.scripts.traditional_ml-plot_elastic_net.md  experiments.002-dmi-tmi.scripts.traditional_ml-plot_random_forest-best_performance_vs_dataset_size_palette.md  experiments.002-dmi-tmi.scripts.traditional_ml-plot_random_forest.md  experiments.002-dmi-tmi.scripts.traditional_ml-plot_random_forest_palette.md  (+781 more)
ontology/: torchcell.rdf
profiles/: 001-prune_gat_diffpool-params-407466-advanced_profiler_output.prof  002-no_prune_gat_diffpool-params-407466-advanced_profiler_output.prof  DMFCostanzo2016LargeDataset_threads_write_data-2023.08.25-22.29.48.prof  cache_len_10_instances-main-2023.08.29-16.17.34.prof  cache_len_2_instances-main-2023.08.29-16.12.38.prof  cell_multithreaded_process-process-2023.09.07-12.30.45.prof  cell_process_m1_naive-process-2023.09.07-12.36.35.prof  constanzo2016_dmf_get_item_lmdb_init_opened-get-2023.09.07-13.02.54.prof  costanzo2016_dmf_get_1_item-get-2023.09.07-12.46.33.prof  costanzo2016_dmf_get_item_lmdb-get-2023.09.07-12.43.05.prof  slow_load_item_skip_file_exist-main-2023.08.29-15.28.59.prof  slow_load_item_skip_file_exist_print_2_instances-main-2023.08.29-15.57.00.prof  slow_load_item_skip_file_exist_print_instance_only-main-2023.08.29-15.41.17.prof
scripts/: build.sh  build_compound_identity_table.py  check_dataset_staleness.py  crontab.txt  deprecate.sh  drain_merge_queue.py  generate_calmorph_labels.py  git_merge_weekly_note.py  import.sh  lit_sync.py  lit_sync_database.py  merge_queue.py  purge_deprecated.sh  run-mypy.sh  run-schema-impact.sh  schema_impact_check.py  setup-worktree.sh  verify_expression_datasets.py  verify_morphology_datasets.py
torchcell/: __init__.py  __version__.py  config.py  cpu_benchmark_system_monitor.py  data_download_yeastmine.py  dataloading_lmdb.py  delete_subset.py  delta_to_m1.sh  ncbi.py  neo4j_example.py  neo4j_fitness_lmdb.py  neo4j_fitness_query.py  prof.py  sc_graph.py  timestamp.py  torchcell.mplstyle  utils.py  wandb_sync_agent_dirs.sh
torchcell.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+2764 files in other folders)
