# pyproject.toml

[build-system]
requires      = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchcell"
version = "0.0.0"
description = "An example package"
readme = "README.md"
authors = [{ name = "Michael Volk", email = "michaeljvolk7@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["An example package", "starving artist"]
dependencies = [
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["black", "bumpver", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Mjvolk3/Dendron-Template"

[project.scripts]
torchcell = "torchcell.__main__:main"

[tool.isort]
profile = "black"
known_first_party = ["docs", "tests", "torchcell", "train"]
skip_gitignore = true
color_output = true

[tool.black]
target-version = ["py310", "py311"]
color = true
skip_magic_trailing_comma = true # true in torchgeo

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
show_error_codes = true
files = [
    "src/**/*.py",
    "tests/**/*.py"
]

# Strict
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[tool.pydocstyle]
convention = "google"
match = "src/torchcell/.*\\.py"


