# pyproject.toml

[build-system]
requires = ["setuptools>=69.0.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchcell"
version = "1.2.0"
description = "An example package"
readme = "README.md"
authors = [{ name = "Michael Volk", email = "michaeljvolk7@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["An example package", "starving artist"]
# dependencies = []
# Floor tracks the torch / torch_geometric stack we run (env is 3.13.0);
# backwards compatibility with older interpreters is a non-goal.
requires-python = ">=3.13"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "semantic-release",
    "pip-tools",
    "pytest",
    # "biocypher@git+https://github.com/Mjvolk3/biocypher@main", won't work
    # "calm@git+https://github.com/oxpig/CaLM@main",
]

[project.urls]
Homepage = "https://github.com/Mjvolk3/Dendron-Template"

[project.scripts]
torchcell = "torchcell.__main__:main"
tcdb = "torchcell.database.tcdb:main"
tc-lit-server = "torchcell.literature.server:main"
tc-lit-backfill = "torchcell.literature.backfill:main"

[tool.pyright]
include = ["torchcell", "experiments"]
venvPath = "/Users/michaelvolk/miniconda3/envs"
venv = "torchcell"

[tool.ruff]
line-length = 88
target-version = "py313"
# Dead/legacy trainer: kept for history, not linted (also ignored by mypy below).
extend-exclude = ["torchcell/trainers/graph_convolution_regression.py"]
# Honor the exclude even when the path is passed explicitly (pre-commit, CI diff-scope).
force-exclude = true

[tool.ruff.lint]
# E/F: pycodestyle+pyflakes, I: isort, UP: pyupgrade, D: pydocstyle.
select = ["E", "F", "I", "UP", "D"]
# E501 owned by the formatter; D205/D212/D415 clash with our frontmatter docstrings.
ignore = ["E501", "D205", "D212", "D415"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D103", "D104"]
"notes/assets/scripts/**" = ["D100", "D103"]
"experiments/**" = ["D100", "D103", "E402"]
# torch_geometric.MessagePassing inspects message()/forward() signatures at runtime
# and chokes on PEP 604 unions (X | Y -> types.UnionType has no __qualname__). PyG
# won't fix this (issue #10138, "not planned"), so keep Optional/Union here. See
# notes/torchcell.nn.ruff-up-breaks-pyg-messagepassing.md.
"torchcell/nn/stoichiometric_hypergraph_conv.py" = ["UP007", "UP045"]
"torchcell/nn/masked_gin_conv.py" = ["UP007", "UP045"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["docs", "tests", "torchcell", "train"]
# A gitignored `wandb/` run-log dir lives at the repo root; ruff's isort scans
# the filesystem and would auto-detect `wandb` as first-party in a working tree
# that has run W&B, but not in a clean CI checkout -- flip-flopping import order.
# Pin it third-party so local and CI lint results agree deterministically.
known-third-party = ["wandb"]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true

[tool.mypy]
# Directories, not globs: torchcell/cell.py and torchcell/cell/ both map to the
# module `torchcell.cell`, so a recursive *.py glob feeds mypy the name twice and
# aborts discovery. Passing the package dirs lets mypy resolve the tree.
files = ["torchcell", "tests"]
# Frozen dead modules (verified zero live importers): scratch one-offs, the dcell
# DEPRECATED quad, and *_scratch / deprecated leftovers. Excluded from the strict
# gate rather than hand-annotated -- WS2 scopes to LIVE source first; type-cleaning
# dead code is wasted effort. torchcell/experiments/ is excluded per Decision 5
# (experiments out of the gate; new experiments enter CI under WS5). Verbose (?x)
# regex, one alternative per line.
exclude = '''(?x)(
    torchcell/scratch/
  | _DEPRECATED\.py$
  | costanzo2016_deprecated\.py$
  | _scratch\.py$
  | torchcell/delete_subset\.py$
  | torchcell/models/hetero_cell_nsa_retry\.py$
  | torchcell/pypy_adapters/
  | torchcell/experiments/
)'''
python_version = "3.13"
# Full strict bundle on our own code. We do NOT set a global
# ignore_missing_imports; untyped third-party libs are handled per-module below
# so our code stays strict instead of silently coercing imports to Any.
strict = true
show_error_codes = true
# Namespace layout (no src/ root); lets discovery complete on the package tree.
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
# Dead/legacy modules that mypy still PROCESSES (so the discovery `exclude` above
# cannot drop them): reached via imports, or passed explicitly by the diff-scoped CI
# mypy (which bypasses `exclude`). ignore_errors is module-scoped and honored in both
# cases, so it is the robust mechanism for changed-but-dead files. Covers: scratch
# one-offs; the PyPy-only adapter path (imported by
# knowledge_graphs/create_pypy_scerevisiae_kg.py); two frozen legacy models
# (graph_attention/graph_convolution, re-exported by torchcell.models.__init__, used
# only by the DEPRECATED_costanzo_smf_dmf_supervised experiment); and trainers/utils
# (pydantic-v1, raises on import, zero importers).
module = [
    "torchcell.scratch.*",
    "torchcell.pypy_adapters.*",
    "torchcell.models.graph_attention",
    "torchcell.models.graph_convolution",
    "torchcell.trainers.utils",
]
ignore_errors = true

[[tool.mypy.overrides]]
# Tests exercise behavior, not type contracts: relax the untyped-def family.
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# Untyped third-party libraries (no py.typed marker, no stubs). Suppress the
# import error per-module rather than globally. Seeded from env/requirements*.txt
# and confirmed by running mypy; extend as new untyped deps are introduced.
module = [
    "GEOparse", "GEOparse.*",
    "adjustText", "adjustText.*",
    "biocypher", "biocypher.*",
    "calm", "calm.*",
    "cellpose", "cellpose.*",
    "cobra", "cobra.*",
    "dask", "dask.*",
    "datasets", "datasets.*",
    "gffutils", "gffutils.*",
    "geomloss", "geomloss.*",
    "goatools", "goatools.*",
    "h5py", "h5py.*",
    "hypernetx", "hypernetx.*",
    "intermine", "intermine.*",
    "lmdb", "lmdb.*",
    "mineru", "mineru.*",
    "neo4j", "neo4j.*",
    "neo4j_utils", "neo4j_utils.*",
    "networkx", "networkx.*",
    "openpyxl", "openpyxl.*",
    "owlready2", "owlready2.*",
    "pandas", "pandas.*",
    "pydantic", "pydantic.*",
    "plotly", "plotly.*",
    "psutil", "psutil.*",
    "pytorch_metric_learning", "pytorch_metric_learning.*",
    "rpy2", "rpy2.*",
    "rustworkx", "rustworkx.*",
    "scipy", "scipy.*",
    "seaborn", "seaborn.*",
    "skimage", "skimage.*",
    "sklearn", "sklearn.*",
    "sortedcontainers", "sortedcontainers.*",
    "sympy", "sympy.*",
    "torch", "torch.*",
    "torch_geometric", "torch_geometric.*",
    "torch_scatter", "torch_scatter.*",
    "torch_sparse", "torch_sparse.*",
    "umap", "umap.*",
    "yaml", "yaml.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Dead/legacy trainer (commented out of trainers/__init__.py, referenced only by
# experiments/DEPRECATED_*). Kept for history but not gated; do not maintain.
module = "torchcell.trainers.graph_convolution_regression"
ignore_errors = true

[[tool.mypy.overrides]]
# pydantic is resolved as Any in the mypy env (untyped-import override above), so
# BaseModel subclasses trip disallow_subclassing_any. This is an env artifact, not a
# code defect (pydantic ships types when installed); relax only subclassing for the
# SGA pydantic-schema modules so their models stay otherwise strict-gated.
module = ["torchcell.sga.models", "torchcell.sga.cellpose_seg"]
disallow_subclassing_any = false

[tool.pytest.ini_options]
markers = [
    "gpu: requires a CUDA device; deselected on CPU-only CI via -m 'not gpu'",
    "slow: builds a full dataset from $DATA_ROOT mirror files (skipped when absent); deselect via -m 'not slow'",
]

[tool.coverage.run]
source = ["torchcell"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools.dynamic]
dependencies = { file = ["env/requirements.txt"] }
# Doesn't allow ordering
# dependencies = {file = ["env/requirements.txt", "env/requirements_dependent.txt"]}

# optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}
version = { attr = "torchcell.__version__" }

[tool.setuptools.package-data]
torchcell = [
    "py.typed",
    "knowledge_graphs/conf/*.yaml",
    "knowledge_graphs/conf/gene_sets/*.txt", # prefilter gene-set lists (build inputs)
    "adapters/conf/*.yaml",
    "datamodels/*.json", # pinned data tables (e.g. compound_identity_table.json)
]

[tool.setuptools.packages.find]
include = ["torchcell*"]

[tool.semantic_release]
version_variables = [
    "pyproject.toml:version",
    "torchcell/__version__.py:__version__",
]
branch = "main"
upload_to_pypi = "true"
commit_parser = "scipy"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "API",
    "DEP",
    "ENH",
    "REV",
    "BUG",
    "MAINT",
    "BENCH",
    "BLD",
    "DEV",
    "DOC",
    "STY",
    "TST",
    "REL",
    "FEAT",
    "TEST",
]
major_tags = ["API"]
minor_tags = ["DEP", "DEV", "ENH", "REV", "FEAT"]
patch_tags = ["BLD", "BUG", "MAINT"]
